# gpui-clipboard-manager

./: .release-please-config.json  AGENTS.md  CHANGELOG.md  Cargo.toml  build.rs  dist-workspace.toml
.github/workflows/: build.yml  ci.yml  msi-preview.yml  release-please.yml  release.yml
src/: app.rs  hotkeys.rs  main.rs
src/clipboard/: link_metadata.rs  mod.rs  ocr.rs  types.rs  watcher.rs  windows.rs
src/migration/: m20260110_000001_create_clipboard_entries.rs  m20260110_000002_add_ocr_text.rs  m20260110_000003_add_link_metadata.rs  mod.rs
src/storage/: entity.rs  history.rs  images.rs  mod.rs  path.rs
src/ui/: mod.rs  popup.rs  text_input.rs
src/utils/: hash.rs  mod.rs
wix/: main.wxs
